--- a/views/pages/index.jade
+++ b/views/pages/index.jade
@@ -136,6 +136,14 @@ html
                             img(src="/images/thumbnails/#{hero.tag}.png")
                         .pick-hero-name
 
+            #pick-team.row.text-center
+                .col-xs-12
+                    .row
+                        each val in ["s1","s2","s3","s4","s5","s6"]
+                            div(id=val).col-xs-4.hero-dropdown-div
+                                select.form-control.hero-dropdown
+                                    option(value="" disabled selected) Choose a hero...
+
             #hero-stats-title.row
                 .col-xs-3
                 #hero-stats-name.col-xs-6.text-center
@@ -167,12 +175,12 @@ html
                     p ©2015 Blizzard Entertainment, Inc. All rights reserved. Overwatch is a trademark of Blizzard Entertainment, Inc.
 
 
+        script(src="js/data/heroes.js")              
+        script(src="js/data/maps.js")        
+        script(src="js/globals.js")        
         script(src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js")
         script(src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js")
         script(src="//cdn.socket.io/socket.io-1.2.0.js")
-        script(src="js/globals.js")        
-        script(src="js/data/heroes.js")        
-        script(src="js/data/maps.js")        
         script(src="js/socket.js")
         script(src="js/libs/rangeslider.min.js")
         script(src="js/game/opponents_game.js")
