added fancy beta banner

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -15,10 +15,17 @@
 }
 
 #beta {
-	padding: 20px;
-	color: orange;
+	padding-top: 16px;
+	color: black;
 	font-size: 14px;
+	background-color: rgb(255, 229, 99);
+	text-shadow: none;
+	line-height: 13px;
 	display: none;
+	-webkit-box-shadow: 0 4px 5px #000;
+	-moz-box-shadow: 0 4px 5px #000;
+	box-shadow: 0 4px 5px #000;
+	
 }
 
 #menu {
