--- a/views/pages/index.jade
+++ b/views/pages/index.jade
@@ -200,10 +200,6 @@ html
                                     #team-submit.menu-btn
                                         p SUBMIT
 
-                                    
-
-
-
             #hero-stats-title.row
                 .col-xs-3
                 #hero-stats-name.col-xs-6.text-center
@@ -223,7 +219,8 @@ html
                             p Maps
   
                 #beta.row.text-center
-                    p Overmatch currently in Beta. Results will most likely be inaccurate until the site collects enough data. Thank you for helping! 
+                    .col-xs-12
+                        p Overmatch currently in Beta. <strong> Results will be inaccurate</strong> until the site collects enough votes. Thank you for helping! 
                 .row
                     .col-xs-0.col-md-2
                     #hero-stats-table.col-xs-12.col-md-8
