fixed loading div, added IP to security check, added comments to db model

--- a/views/pages/index.jade
+++ b/views/pages/index.jade
@@ -22,7 +22,9 @@ html
                         p OverMatch
                     #subtitle.row
                         p Community-Driven Overwatch Stats
-
+            #summary.row
+                .col-xs-12
+                    p OverMatch allows players to vote for what they consider good and bad matchups in Overwatch. This data is used to provide rankings for individual matchups, including enemies, teammates, and map strategies. Players can also use the Team Builder to get suggetions on what heroes to pick based on the enemy or friendly team composition. This site was built by a community member, for the community - I am always interested in <a target="_blank" href="https://docs.google.com/forms/d/1Ux5oRuSmXepCxEovF0-MfycIDpkA8iUzFAMEzGXXR2Y/viewform?usp=send_form">feedback</a>!
             #loading-div.row.text-center.shadow-top.soft-bg
                 p Getting next match
 
@@ -139,9 +141,9 @@ html
                 #map-stats-btn.col-xs-3.menu-option.menu-option
                     p Map Stats
                 #team-counter-btn.col-xs-3.menu-option
-                    p Enemy Counters
+                    p Enemy Team Builder
                 #friendly-team-btn.col-xs-3.menu-option
-                    p Team Picks
+                    p Friendly Team Builder
 
             #pick-hero-before.row.shadow-top
 
