--- a/views/pages/index.jade
+++ b/views/pages/index.jade
@@ -178,7 +178,7 @@ html
                                 .row
                                     .col-xs-12.hero-dropdown-div.text-center
                                         select.form-control.hero-dropdown
-                                            option(value="" selected) Choose a hero...
+                                            option(value="" selected) Choose a hero
                     .row
                         #instructions2.col-xs-12.text-left.pick-instructions
                     .row
@@ -189,7 +189,7 @@ html
                             .row
                                 .col-xs-12.map-dropdown-div.text-center
                                     select#team-map.form-control.map-dropdown
-                                        option(value="" selected) Choose a map...
+                                        option(value="" selected) Choose a map
                         .col-xs-12.col-sm-6.col-md-4.map-dropdown-box
                             .row
                                 #team-days-header.col-xs-12
@@ -227,7 +227,7 @@ html
   
                 #beta.row.text-center
                     .col-xs-12
-                        p Overmatch currently in Beta. <strong> Results will be inaccurate</strong> until the site collects enough votes. Thank you for helping! 
+                        p Overmatch currently in Beta. <strong> Results may be inaccurate</strong> until the site collects enough votes. Thank you for helping! 
                 .row
                     .col-xs-0.col-md-2
                     #hero-stats-table.col-xs-12.col-md-8
